--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer portfolio
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <head>
+<body class="open-sans-normal ">
+    <header>
+        <nav>
+           
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+           <ul>
+            <li ><a class="dark2" href="">porttfolio</a></li>
+            <li ><a class="dark2" href="">Blog</a></li>
+            <li><a href=""><button class="button">Hire me</button></a></li>
+        </ul>
+        </nav>
 
-    </head>
+    </header>
     <main>
 
     </main>
