--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="open-sans-normal ">
-    <header class="header">
+    <header class="header seconder-background">
         <nav  >
            
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -37,8 +37,31 @@
         </div>
 
     </header>
-    <main>
-        <section>
+    <main class="main">
+        <section class="about seconder-background">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item">name    </p>
+                    <p class="item-description">Mary Hardy hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item">Email:</p>
+                    <p class="item-description">into@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item">Date of Birth</p>
+                    <p class="item-description">11 november</p>
+                </div>
+                <div class="about-item">
+                    <p class="item">From:</p>
+                    <p class="item-description">canada</p>
+                </div>
+
+
+
+            </div>
             
         </section>
 
